<resources>
    <string name="app_name">Librería Arezzo</string>

    <!-- Log In and Register-->
    <string name="msg_Email">Correo Electrónico</string>
    <string name="msg_Password">Contraseña</string>
    <string name="bt_Login">Ingresar</string>
    <string name="bt_Register">Registarse</string>

    <!-- Principal Activity-->
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logoff">Cerrar Sesión</string>

    <string name="menu_libro">Libros Arezzo</string>
    <string name="menu_sucursal">Sucursales Arezzo</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Add Libro  -->
    <string name="add_nombre_libro">Nombre Libro</string>
    <string name="add_unidades_libro">Unidades</string>
    <string name="add_autor_libro">Nombre Autor</string>
    <string name="add_agregar_libro">Agregar Libro</string>
    <string name="update_actualizar_libro">Actualizar Libro</string>

    <!--  Add Sucursal  -->
    <string name="add_ubicacion_sucursal">Ubicación Sucursal</string>
    <string name="add_gerente_sucursal">Nombre Gerente</string>
    <string name="add_telefono_sucursal">Teléfono</string>
    <string name="add_agregar_sucursal">Agregar Sucursal</string>
    <string name="update_actualizar_sucursal">Actualizar Sucursal</string>

    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="seguro_borrar">Seguro que desea borrar el libro</string>
    <string name="seguro_borrar_sucursal">Seguro que desea borrar la sucursal</string>
    <string name="delete">Eliminar Libro</string>
    <string name="deleted">Libro Eliminado</string>
    <string name="delete_sucursal">Eliminar Sucursal</string>
    <string name="deleted_sucursal">Sucursal Eliminada</string>
    <string name="success_save">Se guardo la imagen en Firebase con exito!!</string>
    <string name="fail_save">No se pudo guardar la imagen con exito</string>
</resources>