<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.sucursal.UpdateSucursalFragment">

    <EditText
        android:id="@+id/et_ubicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_ubicacion_sucursal"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_gerente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_gerente_sucursal"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_telefono_sucursal"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_actualizar_sucursal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_actualizar_sucursal" />
</LinearLayout>